--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -55,7 +55,7 @@ template(name='delta')
                 .eleven.wide.column
                     //- .filter_row.ui.basic.segment(class=loading_class)
                     .filter_row.ui.basic.segment
-                        .ui.inline.small.header
+                        .ui.inline.small.grey.header
                             |sort by
                         .ui.compact.small.menu
                             .ui.simple.dropdown.item
@@ -64,7 +64,7 @@ template(name='delta')
                                 .fluid.menu
                                     each fields
                                         .item.set_sort_key 
-                                            //- +ismall name=icon
+                                            +ismall name=icon
                                             |#{title}
                         .ui.compact.icon.button.set_sort_direction
                             if sorting_up
@@ -77,7 +77,7 @@ template(name='delta')
                         //-     |#{current_delta.sort_direction}
                         &nbsp;
                         &nbsp;
-                        .ui.inline.small.header
+                        .ui.inline.small.grey.header
                             |limit
                         .ui.compact.small.menu
                             .ui.simple.dropdown.item
@@ -88,42 +88,42 @@ template(name='delta')
                                     +set_limit amount=5
                                     +set_limit amount=10
                                     +set_limit amount=20
-                        .ui.inline.small.header
+                        .ui.inline.small.grey.header
                             |search
                         .ui.small.input
                             input(type='text' val=search_value)
                         &nbsp;
                         &nbsp;
-                        //- .ui.inline.small.header view
-                        //- .ui.compact.menu
-                        //-     .ui.simple.dropdown.item
-                        //-         |#{current_delta.view_mode}
-                        //-         i.dropdown.icon
-                        //-         .menu
-                        //-             +set_view_mode title='table' icon='table'
-                        //-             +set_view_mode title='list' icon='list'
-                        //-             +set_view_mode title='cards' icon='cards'
-                        //-             +set_view_mode title='items' icon='list'
-                        //-             +set_view_mode title='map' icon='map'
-                        //-             +set_view_mode title='graph' icon='graph'
-                        //- .ui.stackable.four.column.grid
-                        .scrolling    
-                            each current_delta.result_ids
-                                //- .column
-                                if is_loading
-                                    .ui.segment
-                                        .ui.placeholder
-                                            .line
-                                            .line
-                                            .line
-                                            .line
-                                            .line
-                                            .line
-                                            .line
-                                            .line
-                                            .line
-                                else 
-                                    +delta_result
+                        .ui.inline.small.grey.header view
+                        .ui.compact.menu
+                            .ui.simple.dropdown.item
+                                |#{current_delta.view_mode}
+                                i.dropdown.icon
+                                .menu
+                                    +set_view_mode title='table' icon='table'
+                                    +set_view_mode title='list' icon='list'
+                                    +set_view_mode title='cards' icon='cards'
+                                    +set_view_mode title='items' icon='list'
+                                    +set_view_mode title='map' icon='map'
+                                    +set_view_mode title='graph' icon='graph'
+                        .ui.hidden.fitted.divider
+                    .scrolling    
+                        each current_delta.result_ids
+                            //- .column
+                            if is_loading
+                                .ui.segment
+                                    .ui.placeholder
+                                        .line
+                                        .line
+                                        .line
+                                        .line
+                                        .line
+                                        .line
+                                        .line
+                                        .line
+                                        .line
+                            else 
+                                +delta_result
                     //- +Template.dynamic template=view_mode_template
             //- .row 
             //-     .sixteen.wide.column
@@ -248,7 +248,7 @@ template(name='delta_result')
                             each viewer_usernames
                                 .ui.small.label #{this}
                         //- +comments
-                    if is_admin
+                    if is_dev
                         +remove_button
             
                     
