--- a/components/user_sections.jade
+++ b/components/user_sections.jade
@@ -46,6 +46,13 @@ template(name='user_dashboard')
     .ui.header 
         +i name='dashboard'
         |dashboard
+    .ui.header user posts
+    .ui.header user activity
+    .ui.header user karma
+    .ui.header user services
+    .ui.header user sales
+    .ui.header user comments
+    .ui.header user comments
 
 
 template(name='user_votes')
