--- a/client/fields.jade
+++ b/client/fields.jade
@@ -1170,7 +1170,7 @@ template(name='multi_user_edit')
             .ui.middle.aligned.selection.animated.list
                 each user_results
                     .select_user.item
-                        a.ui.header(href="/user/#{username}")
+                        .ui.header
                             img.ui.avatar.image(src="{{c.url kiosk_photo width=100 height=100 gravity='face' crop='fill'}}")
                             strong #{first_name} #{last_name}
                             |@#{username}
