--- a/client/styles.css
+++ b/client/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Ubuntu', sans-serif !important;
     /* font-size: 110% !important; */
     /*line-height: 200% !important;*/
-    background: rgba(0,0,0,.01) !important;
+    background: rgba(0,0,0,.02) !important;
     /* filter: invert(.9) !important; */
     /* background: rgba(200, 200, 200, .1) !important */
     /* background: #0e0e44 !important; */
@@ -102,7 +102,7 @@ body {
 
 .menu {
     border-radius: 10px !important;
-    /* transition: all 1s ease !important; */
+    transition: background-color 3s ease !important;
 }
 
 .card {
@@ -794,6 +794,13 @@ h1.ui.header{
 	/*padding-left: 1em;*/
 }
 
+.smallcolumn{
+	max-height:300px;
+	/*max-height:85vh;*/
+	padding-top: 1em;
+	/*padding-left: 1em;*/
+}
+
 .mediumscroll{
 	overflow-y:scroll;
 	overflow-x:hidden;
@@ -827,7 +834,7 @@ h1.ui.header{
 	overflow-x:scroll;
 	/*max-height:1000px;*/
 	/*max-height:85vh;*/
-    transition: background-color 1s; /* Animation */
+    transition: background-color 3s; /* Animation */
     transition: height 1s; /* Animation */
     /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
 
