--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -21,7 +21,7 @@ template(name='login')
                 if logging_in
                     .ui.fluid.big.basic.button.enter(title="login #{username}" class=enter_class)
                         //- i.sign.in.alternate.icon
-                        +i name='enter-2' classes='ui mini inline image'
+                        +i name='internal' classes='ui mini inline image'
                         |login
                         strong #{username}
                         //- i.right.chevron.icon
