--- a/components/commerce/karma.jade
+++ b/components/commerce/karma.jade
@@ -26,10 +26,10 @@ template(name='karma')
     
     
 template(name='earning_methods_small')
-    a.ui.header(href='/m/earning_opportunities')
+    a.ui.header(href='/m/earning_opportunity')
         //- i.exchange.icon
         +i name='invoice'
-        | earning opportunities
+        | earn karma
     .smallscroll
         .ui.large.link.list
             each opportunities
@@ -186,6 +186,20 @@ template(name='send_user_karma')
 
 
 
+template(name='karma_this_week')
+    .ui.grey.header 
+        +i name='leaderboard'
+        |top karma this week
+    .smallscroll
+        each top_karma_users
+            .ui.small.header #{first_letter} #{last_initial} 
+                .ui.small.inline.header #{points}pts 
+                .ui.small.inline.header #{karma}karma
+                each three_tags
+                    .ui.small.basic.label #{this}
+                    
+                    
+                    
 template(name='karma_leaderboard')
     .ui.grey.header 
         +i name='leaderboard'
